--- a/index.html
+++ b/index.html
@@ -251,6 +251,13 @@
       }
     }
   </style>
+  <script>
+  function toggleMenu() {
+    const navbar = document.querySelector('.navbar');
+    navbar.classList.toggle('show');
+  }
+</script>
+
 </head>
 <body>
 
