--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       background: none;
       border: none;
       color: white;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       cursor: pointer;
     }
 
@@ -195,7 +195,8 @@
     @media (max-width: 768px) {
       .header {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: stretch;
+        padding: 1rem;
       }
 
       .menu-toggle {
@@ -209,6 +210,7 @@
         width: 100%;
         background-color: #050505;
         padding: 1rem 0;
+        gap: 0.5rem;
       }
 
       .navbar.show {
@@ -216,22 +218,19 @@
       }
 
       .navbar a {
-        margin: 0.5rem 1rem;
+        margin: 0.3rem 1rem;
         display: block;
       }
 
       .navbar form {
         padding: 0 1rem;
-        width: 100%;
         display: flex;
         flex-direction: column;
-      }
-
-      .navbar input[type="text"] {
-        margin-bottom: 0.5rem;
+        gap: 0.5rem;
         width: 100%;
       }
 
+      .navbar input[type="text"],
       .navbar button {
         width: 100%;
       }
@@ -251,17 +250,18 @@
       }
     }
   </style>
+
   <script>
-  function toggleMenu() {
-    const navbar = document.querySelector('.navbar');
-    navbar.classList.toggle('show');
-  }
-</script>
+    function toggleMenu() {
+      const navbar = document.querySelector('.navbar');
+      navbar.classList.toggle('show');
+    }
+  </script>
 
 </head>
 <body>
 
-  <!-- Header -->
+<!-- Header -->
 <header class="header">
   <div class="logo">ZVN.NEWS</div>
   <button class="menu-toggle" onclick="toggleMenu()"><i class="fas fa-bars"></i></button>
@@ -277,87 +277,86 @@
   </nav>
 </header>
 
+<!-- Hero -->
+<section class="hero">
+  <h1>Berita DKI JAKARTA</h1>
+</section>
 
-  <!-- Hero -->
-  <section class="hero">
-    <h1>Berita DKI JAKARTA</h1>
-  </section>
-
-  <!-- Main News -->
-  <main class="main-news">
-    <h2>Berita Hari Ini</h2>
-    <div class="news-grid">
-      <div class="news-card">
-        <img src="img/tilang.jpg" alt="Berita1">
-        <p>Ganjil Genap di Jakarta Ditiadakan pada 18 April 2025</p>
-        <a href="berita1.html" class="read-more">Baca Berita ...</a>
-      </div>
-      <div class="news-card">
-        <img src="img/penghargaan.jpeg" alt="Berita2">
-        <p>Pemprov DKI Jakarta Terima Penghargaan Aspek Kinerja Total Tingkat Provinsi</p>
-        <a href="berita2.html" class="read-more">Baca Berita ...</a>
-      </div>
-      <div class="news-card">
-        <img src="img/hut.jpg" alt="Berita3">
-        <p>HUT Ke-78 RI, Pemprov DKI Jakarta Gelar Kemeriahan di Monas</p>
-        <a href="berita3.html" class="read-more">Baca Berita ...</a>
-      </div>
-      <div class="news-card">
-        <img src="img/banjir.jpeg" alt="Berita4">
-        <p>Tinjau Banjir Rob di Muara Angke, Pj Gubernur DKI Jakarta Salurkan Bantuan Bahan Pokok</p>
-        <a href="berita4.html" class="read-more">Baca Berita ...</a>
-      </div>
+<!-- Main News -->
+<main class="main-news">
+  <h2>Berita Hari Ini</h2>
+  <div class="news-grid">
+    <div class="news-card">
+      <img src="img/tilang.jpg" alt="Berita1">
+      <p>Ganjil Genap di Jakarta Ditiadakan pada 18 April 2025</p>
+      <a href="berita1.html" class="read-more">Baca Berita ...</a>
     </div>
-  </main>
-
-  <!-- Vertical News -->
-  <section class="vertical-news-list">
-    <div class="vertical-card">
-      <img src="img/sekolah.jpeg" alt="Berita">
-      <div class="vertical-content">
-        <h3>Dukung Makan Bergizi Gratis, Pj. Gubernur Teguh Uji Coba 10.448 Paket Makanan di 12 Sekolah</h3>
-        <p>
-          Presiden Prabowo Subianto dan Wakil Presiden Gibran Rakabuming Raka tengah menguji coba salah satu program andalannya, yaitu Makan Bergizi Gratis (MBG) di sejumlah wilayah. Di Jakarta, uji coba MBG ini berlangsung di 12 sekolah yang turut didampingi Pj. Gubernur Teguh Setyabudi. 
-        </p>
-        <a href="beritav1.html" class="read-more">Baca Berita ...</a>
-      </div>
+    <div class="news-card">
+      <img src="img/penghargaan.jpeg" alt="Berita2">
+      <p>Pemprov DKI Jakarta Terima Penghargaan Aspek Kinerja Total Tingkat Provinsi</p>
+      <a href="berita2.html" class="read-more">Baca Berita ...</a>
     </div>
-
-    <div class="vertical-card">
-      <img src="img/lanjtik.jpeg" alt="Berita">
-      <div class="vertical-content">
-        <h3>Dilantik Jadi Pj. Gubernur Jakarta, Teguh Setyabudi Paparkan Program Prioritasnya</h3>
-        <p>
-          Pj. Gubernur DKI Jakarta Teguh Setyabudi berkomitmen untuk bergerak cepat dan bekerja keras dalam melanjutkan program pembangunan Kota Jakarta menuju kota global. 
-        </p>
-        <a href="beritav2.html" class="read-more">Baca Berita ...</a>
-      </div>
+    <div class="news-card">
+      <img src="img/hut.jpg" alt="Berita3">
+      <p>HUT Ke-78 RI, Pemprov DKI Jakarta Gelar Kemeriahan di Monas</p>
+      <a href="berita3.html" class="read-more">Baca Berita ...</a>
     </div>
-
-    <div class="vertical-card">
-      <img src="img/gubernur.jpeg" alt="Berita">
-      <div class="vertical-content">
-        <h3>Peran Pj. Gubernur Teguh dalam Kesuksesan Pelantikan Presiden dan Wapres</h3>
-        <p>
-          Pelantikan Presiden Prabowo Subianto dan Wakil Presiden Gibran Rakabuming Raka telah berlangsung dengan sukses di Gedung MPR, Jakarta. Di balik kesuksesan itu, ada peran besar dari Pj. Gubernur Jakarta Teguh Setyabudi. 
-        </p>
-        <a href="beritav3.html" class="read-more">Baca Berita ...</a>
-      </div>
+    <div class="news-card">
+      <img src="img/banjir.jpeg" alt="Berita4">
+      <p>Tinjau Banjir Rob di Muara Angke, Pj Gubernur DKI Jakarta Salurkan Bantuan Bahan Pokok</p>
+      <a href="berita4.html" class="read-more">Baca Berita ...</a>
     </div>
-  </section>
+  </div>
+</main>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>&copy; 2025 Zainal Arivin. All rights reserved.</p>
-    <div class="social-media">
-      <a href="https://facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="https://youtube.com" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
-      <a href="https://twitter.com" target="_blank" title="X / Twitter"><i class="fab fa-x-twitter"></i></a>
-      <a href="https://tiktok.com" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
-      <a href="https://threads.net" target="_blank" title="Threads"><i class="fab fa-threads"></i></a>
+<!-- Vertical News -->
+<section class="vertical-news-list">
+  <div class="vertical-card">
+    <img src="img/sekolah.jpeg" alt="Berita">
+    <div class="vertical-content">
+      <h3>Dukung Makan Bergizi Gratis, Pj. Gubernur Teguh Uji Coba 10.448 Paket Makanan di 12 Sekolah</h3>
+      <p>
+        Presiden Prabowo Subianto dan Wakil Presiden Gibran Rakabuming Raka tengah menguji coba salah satu program andalannya, yaitu Makan Bergizi Gratis (MBG) di sejumlah wilayah.
+      </p>
+      <a href="beritav1.html" class="read-more">Baca Berita ...</a>
     </div>
-  </footer>
+  </div>
+
+  <div class="vertical-card">
+    <img src="img/lanjtik.jpeg" alt="Berita">
+    <div class="vertical-content">
+      <h3>Dilantik Jadi Pj. Gubernur Jakarta, Teguh Setyabudi Paparkan Program Prioritasnya</h3>
+      <p>
+        Pj. Gubernur DKI Jakarta Teguh Setyabudi berkomitmen untuk bergerak cepat dan bekerja keras dalam melanjutkan program pembangunan Kota Jakarta menuju kota global.
+      </p>
+      <a href="beritav2.html" class="read-more">Baca Berita ...</a>
+    </div>
+  </div>
+
+  <div class="vertical-card">
+    <img src="img/gubernur.jpeg" alt="Berita">
+    <div class="vertical-content">
+      <h3>Peran Pj. Gubernur Teguh dalam Kesuksesan Pelantikan Presiden dan Wapres</h3>
+      <p>
+        Pelantikan Presiden Prabowo Subianto dan Wakil Presiden Gibran Rakabuming Raka telah berlangsung dengan sukses di Gedung MPR, Jakarta.
+      </p>
+      <a href="beritav3.html" class="read-more">Baca Berita ...</a>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="footer">
+  <p>&copy; 2025 Zainal Arivin. All rights reserved.</p>
+  <div class="social-media">
+    <a href="https://facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://youtube.com" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+    <a href="https://twitter.com" target="_blank" title="X / Twitter"><i class="fab fa-x-twitter"></i></a>
+    <a href="https://tiktok.com" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
+    <a href="https://threads.net" target="_blank" title="Threads"><i class="fab fa-threads"></i></a>
+  </div>
+</footer>
 
 </body>
 </html>
