--- a/kesehatan.html
+++ b/kesehatan.html
@@ -5,20 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Berita Jakarta - ZVN.News</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #fff;
-      color: #000;
+      background-color: #fff; /* latar belakang putih */
+      color: #000; /* teks hitam */
     }
 
     .header {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      background: #050505;
+      width: 97%;
+      background: #050505; /* header putih */
       color: #f3eded;
       padding: 1rem 2rem;
       display: flex;
@@ -33,25 +34,19 @@
       font-weight: bold;
     }
 
-    .navbar {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
-
     .navbar a {
+      margin-left: 1rem;
       color: #f3f0f0;
       text-decoration: none;
-      padding: 0.3rem 0.5rem;
     }
 
     .navbar a:hover {
-      color: orange;
+      color: orange
     }
 
     .navbar form {
-      display: flex;
-      gap: 0.4rem;
+      display: inline-block;
+      margin-left: 1rem;
     }
 
     .navbar input[type="text"] {
@@ -69,25 +64,26 @@
       cursor: pointer;
     }
 
-    .navbar a[href="kesehatan.html"] {
-      color: orange;
-    }
-
     .hero {
       background-image: url('img/latar.jpeg');
       background-size: cover;
       background-position: center;
-      height: 400px;
+      height: 400px; /* tinggi gambar diperbesar */
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
       color: white;
-      margin-top: 70px; /* agar tidak tertutup navbar */
     }
+
+    .navbar a[href="kesehatan.html"] {
+  color: orange;
+}
+
 
     .main-news {
       padding: 2rem;
+      margin-top: 2rem;
     }
 
     .main-news h2 {
@@ -124,6 +120,38 @@
       border-radius: 3px;
     }
 
+    .vertical-news-list {
+      margin: 2rem;
+    }
+
+    .vertical-card {
+      display: flex;
+      background-color: #1c1c1c;
+      color: white;
+      border-radius: 8px;
+      overflow: hidden;
+      margin-bottom: 1rem;
+    }
+
+    .vertical-card img {
+      width: 220px;
+      object-fit: cover;
+    }
+
+    .vertical-content {
+      padding: 1rem;
+    }
+
+    .vertical-content h3 {
+      margin: 0 0 0.5rem;
+      font-size: 1rem;
+    }
+
+    .vertical-content .category {
+      font-size: 0.85rem;
+      color: orange;
+    }
+
     .footer {
       text-align: center;
       padding: 1rem;
@@ -132,11 +160,11 @@
       margin-top: 3rem;
     }
 
-    .social-media {
+    .footer .social-media {
       margin-top: 0.5rem;
     }
 
-    .social-media a {
+    .footer .social-media a {
       color: #fff;
       margin: 0 0.5rem;
       font-size: 1.2rem;
@@ -144,7 +172,7 @@
       transition: color 0.3s;
     }
 
-    .social-media a:hover {
+    .footer .social-media a:hover {
       color: orange;
     }
   </style>
@@ -175,10 +203,84 @@
   <main class="main-news">
     <h2>Berita Hari Ini</h2>
     <div class="news-grid">
-      <!-- Isi berita disini (tidak diubah) -->
-      <!-- Potongan kode berita di sini tetap seperti sebelumnya -->
+      <div class="news-card">
+        <img src="img/forum.jpg" alt="Berita1">
+        <p>Dinas Kesehatan Provinsi DKI Jakarta Gelar Forum Pra Rapat Kerja Kesehatan Daerah Tahun 2025</p>
+        <a href="kesehatan1.html" class="read-more">Baca Berita ...</a>
+      </div>
+      <div class="news-card">
+        <img src="img/kepaladinas.jpg" alt="Berita2">
+        <p>Kepala Dinas Kesehatan DKI Jakarta Dampingi Menteri Kesehatan Tinjau Pelaksanaan Cek Kesehatan Gratis (CKG) Bagi Mitra Driver Online</p>
+        <a href="Kesehatan2.html" class="read-more">Baca Berita ...</a>
+      </div>
+      <div class="news-card">
+        <img src="img/gedung.jpg" alt="Berita3">
+        <p>Kepala Dinas Kesehatan DKI Jakarta Dampingi Wakil Gubernur DKI Jakarta Resmikan Gedung Puskesmas Pancoran</p>
+        <a href="Kesehatan3.html" class="read-more">Baca Berita ...</a>
+      </div>
+      <div class="news-card">
+        <img src="img/penilaiaan.jpg" alt="Berita4">
+        <p>Pelaksanaan Penilaian Portofolio dan Pembekalan Calon Peserta Uji Kompetensi berbasis Computer Assisted Test (CAT) Jabatan Fungsional Kesehatan Periode April Tahun 2025</p>
+        <a href="kesehatan4.html" class="read-more">Baca Berita ...</a>
+      </div>
+      <div class="news-card">
+        <img src="img/monitoring.jpg" alt="Berita1">
+        <p>Dinas Kesehatan Gelar Monitoring PSN dan Lisolisasi Pasca Banjir di RW 01 Kelurahan Rawa Buaya</p>
+        <a href="kesehatan5.html" class="read-more">Baca Berita ...</a>
+      </div>
+      <div class="news-card">
+        <img src="img/banjir.jpeg" alt="Berita2">
+        <p>Dinas Kesehatan Provinsi DKI Jakarta Kerahkan Tim Dukungan Kesehatan untuk Korban Banjir</p>
+        <a href="kesehatan6.html" class="read-more">Baca Berita ...</a>
+      </div>
+      <div class="news-card">
+        <img src="img/gizi.jpg" alt="Berita3">
+        <p>Dukung Gizi Seimbang untuk Ibu dan Anak, Kepala Dinas Kesehatan Provinsi DKI Jakarta Dampingi Wakil Gubernur Provinsi DKI Jakarta Hadiri Sarapan Bergizi</p>
+        <a href="kesehatan7.html" class="read-more">Baca Berita ...</a>
+      </div>
+      <div class="news-card">
+        <img src="img/gelar.jpg" alt="Berita4">
+        <p>Dinas Kesehatan Provinsi DKI Jakarta Gelar Entry Meeting Pemeriksaan LKPD TA 2024 Bersama BPK</p>
+        <a href="kesehatan8.html" class="read-more">Baca Berita ...</a>
+      </div>
     </div>
   </main>
+
+  <!-- Vertical News List
+  <section class="vertical-news-list">
+    <div class="vertical-card">
+      <img src="img/sekolah.jpeg" alt="Berita">
+      <div class="vertical-content">
+        <h3>Dukung Makan Bergizi Gratis, Pj. Gubernur Teguh Uji Coba 10.448 Paket Makanan di 12 Sekolah</h3>
+        <p>
+          Presiden Prabowo Subianto dan Wakil Presiden Gibran Rakabuming Raka tengah menguji coba salah satu program andalannya, yaitu Makan Bergizi Gratis (MBG) di sejumlah wilayah. Di Jakarta, uji coba MBG ini berlangsung di 12 sekolah yang turut didampingi Pj. Gubernur Teguh Setyabudi. 
+        </p>
+        <a href="beritav1.html" class="read-more">Baca Berita ...</a>
+      </div>
+    </div>
+
+    <div class="vertical-card">
+      <img src="img/lanjtik.jpeg" alt="Berita">
+      <div class="vertical-content">
+        <h3>Dilantik Jadi Pj. Gubernur Jakarta, Teguh Setyabudi Paparkan Program Prioritasnya</h3>
+        <p>
+          Pj. Gubernur DKI Jakarta Teguh Setyabudi berkomitmen untuk bergerak cepat dan bekerja keras dalam melanjutkan program pembangunan Kota Jakarta menuju kota global. 
+        </p>
+        <a href="beritav2.html" class="read-more">Baca Berita ...</a>
+      </div>
+    </div>
+
+    <div class="vertical-card">
+      <img src="img/gubernur.jpeg" alt="Berita">
+      <div class="vertical-content">
+        <h3>Peran Pj. Gubernur Teguh dalam Kesuksesan Pelantikan Presiden dan Wapres</h3>
+        <p>
+          Pelantikan Presiden Prabowo Subianto dan Wakil Presiden Gibran Rakabuming Raka telah berlangsung dengan sukses di Gedung MPR, Jakarta. Di balik kesuksesan itu, ada peran besar dari Pj. Gubernur Jakarta Teguh Setyabudi. 
+        </p>
+        <a href="beritav3.html" class="read-more">Baca Berita ...</a>
+      </div>
+    </div>
+  </section> -->
 
   <!-- Footer -->
   <footer class="footer">
